--- a/.github/.pull_request_template.md
+++ b/.github/.pull_request_template.md
@@ -8,7 +8,6 @@ Please provide a detailed summary of the changes, including the purpose and cont
 
 - [ ] Bug Fix
 - [ ] New Feature
-- [ ] Performance Improvement
 - [ ] Documentation Update
 - [ ] Dependency Update
 - [ ] Other (please specify):
@@ -17,26 +16,16 @@ Please provide a detailed summary of the changes, including the purpose and cont
 
 Before submitting this pull request, ensure the following tasks have been completed:
 
-- [ ] Changes have been tested locally using `vite dev` or equivalent.
 - [ ] Associated documentation has been updated to reflect the changes.
 - [ ] This PR resolves any linked issues (**issue ID:** #{ID}).
 - [ ] A clear and detailed description of the problem, solution, and implementation approach is provided.
 - [ ] Code follows the project's coding standards and guidelines.
 - [ ] No errors or warnings are present in the console.
-- [ ] Relevant tests have been added or updated and pass locally.
 - [ ] All merge conflicts are resolved.
-
-## Testing Instructions
-
-Please describe the testing steps and any relevant configurations for verifying the changes:
-
-1.
-2.
-3.
 
 ## Dependencies and Updates
 
-Include any updates to dependencies, frameworks, or tooling (e.g., `tailwindcss`, `vue-router`, `pinia`) and their impact on the project.
+Include any updates to dependencies, frameworks, or tooling (e.g., `prettier`, `cssnano`, `postcss`) and their impact on the project.
 
 ## Additional Comments
 
